--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,30 @@
 
+parser-update branch
+
+  - updating the N3 Parser to better match the latest specification;
+    this is not backwards compatible with the syntax supported by
+    Swish in version 0.2.1 (e.g. no ":-"), so there are a number
+    of changes to the test suite
+
+  - the new specification is not fully supported yet; in particular
+
+    - @keywords, @forSome, @forAll are not supported
+
+    - string literals are not parsed correctly, embarassingly enough
+
+    - the N3 Formatter hasn't yet been updated to match the new
+      syntax, in particular the output may include use of the
+      now-removed :- symbol.
+
+    - the test suite has been cleaned to pass with the new code but
+      it has not been re-worked or extended to properly test the new
+      parser
+
+    - the parser is *significantly* slower than the old version
+
+  - I plan to move to using Text rather than String, which will mean
+    changing from Parsec to attoparsec-text (probably).
+
 0.2.1 to 0.3.0.0:
 
   - removed modules, wither because un-needed or replaced
