--- a/TODO
+++ b/TODO
@@ -48,3 +48,28 @@ Some things I want to/should do (not in order)
 
 - change SwishAction from a tuple to a SwishStateIO (); requires an
   minor version update
+
+- change To/FromRDFLabel to To/FromLabel
+  add instances for Label (id/Just . id)
+  add URI instances (ScopedName "?" I think)
+
+  add To/FromArc classes that take convert to/from
+  a tuple; this is where To/FromLabel instances of
+  Label come in since can say
+
+    instance (ToLabel a, ToLabel b, ToLabel c) => ToArc ..
+
+  Hmm, perhaps not; at least not as a typeclass; it
+  may just make more sense as a constructor/destructor
+
+- N3Formatter should output integer/float/bool/... as "native"
+  values rather than e.g. "1"^^xsd:integer 
+
+  NTriples does not support this syntax, does it?
+
+- can Swish.Utils.DateTime be replaced by existing routines (do
+  not remove the module yet, mark as deprecate) 
+
+- check that the syntax supported by Read is compatible with
+  RDF for To/FromLabel conversions of int/real types.
+
