--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+0.3.1.2:
+
+  - Swish.RDF.RDFGraph:
+
+    - toRDFGraph now uses the supplied labels to set up the namespace
+      rather than using an empty namespace map.
+
 0.3.1.1:
 
   - N3 I/O: 
