--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,8 @@
     - toRDFGraph now uses the supplied labels to set up the namespace
       rather than using an empty namespace map.
 
+    - minor documentation improvements.
+
 0.3.1.1:
 
   - N3 I/O: 
