--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@
     parsing is done using Text rather than String values. At present the
     RDFLabel and RDFGraph classes have not been updated to use Text (so
     some conversion between the two types is introduced). The eventual
-    plan is to use Text internally.
+    plan is to use Text as much as sensible.
 
   - removed Swish.Utils.DateTime and Swish.Utils.TraceHelpers
 
