--- a/TODO
+++ b/TODO
@@ -70,3 +70,14 @@ Some things I want to/should do (not in order)
   strings and values for the formatter/parser code (such as,
   perhaps, Swish.RDF.Datatype.DatatypeMap)
 
+Text conversion:
+
+  - use polyparse rather than attoparsec-text since this allows us
+    to include state
+
+  - converting to Text in pieces, so lots of conversion via String
+    is apparent. This needs fixing, including
+      RDFDatatypeXsdString
+    to convert to/from Text rather than String
+
+  - Swish.RDF.RDFProof to use Text rather than String for proofs
