N3Parser: the default prefix is <#> rather than explicitly including the file name
--HG--
branch : parser-rewrite-polyparse

--- a/TODO
+++ b/TODO
@@ -132,14 +132,15 @@ namespace be on output; the one chosen from the input graph but then what
 if the input is from ntriples or there is another namespace with many more
 triples?
 
-*) default prefix
-
-Note, from the N3 submission it looks like the default prefix should be
-equivalent to 
-  @prefix : <#>.
-ie do not explicitly include the document identifier.
-
 *) @keywords in N3
 
 If @keywords is given then any bare name (not in the keywords list) is taken
 to be a local name in the default namespace => (ie treat foo as :foo).
+
+*) Namespace
+
+I wonder if using (Maybe String) for the prefix in Namespace is worth it
+since 
+  a) a user could always say Just ""
+  b) it is likely that using "" is equivalent to Nothing (ie is there any
+     code benefit either speed or semantically to using Maybe?)
