--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.5.0.3:
+
+  - Missed a FlexibleInstances pragma for ghc 7.2.
+
 0.5.0.2:
 
   - Removed random and bytesttring package constraints and moved HUnit
