Add Data.Interned.URI and use it in QName to try and optimize equality checks
--HG--
branch : intern-branch

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+
+An attempt to using some form of hash-based representation for
+URIs to speed up comparison
+
 0.5.0.3:
 
   - Missed a FlexibleInstances pragma for ghc 7.2.
