--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.6.1.0:
+
+  - add support for reading Turtle format and the Swish.RDF.TurtleParser
+    module.
+
 0.6.0.1:
 
   - use the hashing interface provided by Data.Hashable rather than
