--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+0.6.1.2:
+
+  - corrected mtl constraint from >= 1 to >= 2 as the code does
+    not build with mtl=1 and increased the upper limit on time
+    to 1.4.
+
 0.6.1.1:
 
   - minor improvements to error message when parsing Turtle,
